force-app/main/default/objects/Contact/fields/CPF_CNPJ__c.field-meta.xml
<CustomField>
    <fullName>CPF_CNPJ__c</fullName>
    <externalId>true</externalId>
    <label>CPF/CNPJ</label>
    <length>14</length>
    <type>Text</type>
</CustomField>