force-app/main/default/objects/Contact/fields/LOCALE__c.field-meta.xml
<CustomField>
    <fullName>LOCALE__c</fullName>
    <externalId>true</externalId>
    <label>Locale</label>
    <length>3</length>
    <type>Text</type>
</CustomField>