force-app/main/default/objects/Contact/fields/N_o_Incomodar__c.field-meta.xml
<CustomField>
    <fullName>N_o_Incomodar__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Não Incomodar</label>
    <type>Checkbox</type>
</CustomField>