force-app/main/default/objects/Contact/fields/Nacionalidade__c.field-meta.xml
<CustomField>
    <fullName>Nacionalidade__c</fullName>
    <label>Nacionalidade</label>
    <length>255</length>
    <type>Text</type>
</CustomField>