force-app/main/default/objects/Contact/fields/Natureza_Jur_dica__c.field-meta.xml
<CustomField>
    <fullName>Natureza_Jur_dica__c</fullName>
    <label>Natureza Jurídica</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PF</fullName>
            </value>
            <value>
                <fullName>PJ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>