force-app/main/default/objects/Contact/fields/Profiss_o__c.field-meta.xml
<CustomField>
    <fullName>Profiss_o__c</fullName>
    <label>Profissão</label>
    <length>50</length>
    <type>Text</type>
</CustomField>